# bouncer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.journal  README.md  TODO.md  rustfmt.toml
crates/bounce-delivery/: Cargo.toml
crates/bounce-delivery/src/: main.rs
crates/bouncer-client/: Cargo.toml
crates/bouncer-client/src/: main.rs
crates/bouncer-helpers/: Cargo.toml
crates/bouncer-helpers/src/: de.rs  lib.rs  logging.rs  shutdown.rs
crates/bouncer-journal/: Cargo.toml
crates/bouncer-journal/src/: args.rs  config.rs  main.rs
crates/bouncer-journal/src/core/: journal_listener.rs  mod.rs  parser.rs  publisher.rs  types.rs  watcher.rs
crates/bouncer-observer/: Cargo.toml
crates/bouncer-observer/src/: args.rs  config.rs  main.rs
crates/bouncer-observer/src/core/: mod.rs  parser.rs  publisher.rs  types.rs  udp_listener.rs
crates/bouncer-proto/: Cargo.toml
crates/bouncer-proto/src/: lib.rs
crates/bouncer-server/: Cargo.toml
crates/bouncer-server/src/: app.rs  config.rs  main.rs
crates/bouncer-server/src/core/: database.rs  dispatcher.rs  imap.rs  mod.rs  parser.rs  server.rs  spool.rs
crates/bouncer-tools/: Cargo.toml
deploy/: bouncer.example.yaml  journal.example.yaml  journal.yaml  observer.example.yaml
deploy/postfix/: main.cf  master.cf  transport
deploy/rsyslog/: 49-observer.conf
deploy/systemd/: bouncer-journal.service  bouncer-observer.service  bouncer-server.service
scripts/: bouncer-journal.docker.sh  deploy.sh
tests/: client-test.sh  follow-observer-log.sh  test-client-send.sh  test-imap-fetch.sh  test-observer-udp.sh
tests/bounces/: inbox.returned.eml  notification.eml  outlook.bounce.eml
