[package]
name = "bouncer-helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
humantime = "2.3"
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"
