[package]
name = "bouncer-observer"
version = "0.1.0"
edition = "2024"
keywords = ["postfix", "email", "bounce", "smtp", "ingestion"]
authors = ["developer <iadeveloper@hotmail.com>"]
description = "Postfix maillog observer via rsyslogd to correlate queue IDs with Message-IDs set by delivery applications"

[dependencies]
anyhow.workspace = true
bouncer-helpers = { path = "../bouncer-helpers" }
bouncer-proto = { path = "../bouncer-proto", features = ["tokio"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
