[package]
name = "bouncer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bouncer-helpers = { path = "../bouncer-helpers" }
bouncer-proto = { path = "../bouncer-proto", features = ["tokio"] }
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio-util.workspace = true
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
futures-util = "0.3"
humantime = "2.3"
time = { version = "0.3", default-features = false, features = ["std"] }
mail-parser = "0.11.2"
